# qt_call_matlab

./: .gitignore  CMakeLists.txt  README.md  calculate_with_parameters.m  example.m  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
